@@ -24,7 +24,7 @@ def test_suite():
                      setUp=configurationSetUp,
                      tearDown=tearDown,
                      optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
-
+        DocTestSuite('plone.app.vocabularies.terms'),
         ))
 
 if __name__ == '__main__':
