@@ -4,6 +4,9 @@ Changelog for plone.app.vocabularies
 
 plone.app.vocabulary - 1.0.3 Unreleased
 
+    - Added tests for the special term classes.
+      [hannosch]
+
     - Added tests for the language and skins vocabularies.
       [hannosch]
 
